# HyDE

./: .gitignore  CHANGELOG.md  dots-legacy.toml  dots.toml
Configs/.local/lib/hyde/: .editorconfig  altab.lua  animations.lua  app.sh  batterynotify.lua  batterynotify.sh  color.set.sh  config.lua  globalcontrol.sh  hypr.altab.lua  hyprlock.sh  keybinds_hint.sh  layouts.lua  lockscreen.sh  logoutlaunch.sh  mediaplayer.py  open.lua  pm.py  pyproject.toml  resetxdgportal.sh  rofi.animations.lua  rofi.layouts.lua  rofi.shaders.lua  rofi.workflows.lua  rofilaunch.sh  screenshot.sh  session.py  shaders.lua  system.update.py  system.update.sh  theme.switch.sh  volumecontrol.sh  wallpaper.hyprpaper.sh  wallpaper.sh  waybar.py  window.pin.lua  workflows.lua
Configs/.local/lib/hyde/altab/: hypr.lua  hyprland.lua
Configs/.local/lib/hyde/color/: dconf.lua  hypr.sh
Configs/.local/lib/hyde/keybinds/: hint-hyprland.py
Configs/.local/lib/hyde/luautils/: hypr-toml.lua  init.lua  xdg.lua
Configs/.local/lib/hyde/luautils/global/: log.lua  notify.lua  state.lua
Configs/.local/lib/hyde/luautils/hypr/: hyprctl.lua
Configs/.local/lib/hyde/luautils/rofi/: pos.lua
Configs/.local/lib/hyde/luautils/selector/: common.lua  (+1 more)
Configs/.local/lib/hyde/pm/: pacman.py  paru.py  yay.py  zypper.py
Configs/.local/lib/hyde/pygui/: color.shuffle.py
Configs/.local/lib/hyde/pyutils/: logger.py  lua_env.json  lua_env.py
Configs/.local/lib/hyde/screenshot/: grimblast
Configs/.local/lib/hyde/session/: manager.py  pluginloader.py
Configs/.local/lib/hyde/shell/: activate  activate.fish
(+156 files in other folders)
